--- a/index.html
+++ b/index.html
@@ -14,19 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Roboto+Slab:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
@@ -38,29 +26,29 @@
           <a class="header-logo" href="./">
             <img
               class="logo"
-              src="./assets/icons/Group 421.png"
+              src="./assets/icons/Group-421.png"
               height="40"
               width="40"
-              alt="logo icon"
+              alt="logo_icon"
             />
             <span class="header-logo__text">Mulih</span>
           </a>
 
           <ul class="navigation-menu">
             <li class="navigation-menu__item">
-              <a class="navigation-menu__link" href="#about">Home</a>
+              <a class="navigation-menu__link" href="./">Home</a>
             </li>
             <li class="navigation-menu__item">
-              <a class="navigation-menu__link" href="#about">Property</a>
+              <a class="navigation-menu__link" href="#property">Property</a>
             </li>
             <li class="navigation-menu__item">
               <a class="navigation-menu__link" href="#about">About</a>
             </li>
             <li class="navigation-menu__item">
-              <a class="navigation-menu__link" href="#about">Service</a>
+              <a class="navigation-menu__link" href="#service">Service</a>
             </li>
             <li class="navigation-menu__item">
-              <a class="navigation-menu__link" href="#about">Contact</a>
+              <a class="navigation-menu__link" href="#contact">Contact</a>
             </li>
           </ul>
 
@@ -90,22 +78,22 @@
               <button class="Group418_button1">rent</button>
               <ul class="Group418_list">
                 <li class="Group418_item1">
-                  <label class="Group418_label" for="">Location</label>
-                  <select class="Group418_select1">
+                  <label for="label1" class="Group418_label">Location</label>
+                  <select id="label1" class="Group418_select1">
                     <option class="Group418_option">Bogor, Jawa Barat</option>
                     <option class="Group418_option">Bogor, Jawa Barat</option>
                   </select>
                 </li>
                 <li class="Group418_item">
-                  <label class="Group418_label" for="">Type</label>
-                  <select class="Group418_select2">
+                  <label for="label2" class="Group418_label">Type</label>
+                  <select id="label2" class="Group418_select2">
                     <option class="Group418_option">Home</option>
                     <option class="Group418_option">Home</option>
                   </select>
                 </li>
                 <li class="Group418_item">
-                  <label class="Group418_label" for="">Price Range</label>
-                  <select class="Group418_select3">
+                  <label for="label3" class="Group418_label">Price Range</label>
+                  <select id="label3" class="Group418_select3">
                     <option class="Group418_option">$200-$350</option>
                     <option class="Group418_option">$200-$350</option>
                   </select>
@@ -118,10 +106,10 @@
           </div>
         </div>
       </section>
-      <section class="Group368">
+      <section class="Group368" id="property">
         <div class="container">
           <p class="Group368_link1">discover</p>
-          <h1 class="Group368_title">Best revomendation</h1>
+          <h2 class="Group368_title">Best revomendation</h2>
           <div class="discover__wrap">
             <p class="Group368_text">
               Discover our exclusive selection of the finest one-of-a-kind
@@ -132,9 +120,9 @@
               ><img
                 class="Group368_link4"
                 src="./assets/icons/Arrow - Right Circle.avif"
-                width="24px"
-                height="24px"
-                alt="Learn More"
+                width="24"
+                height="24"
+                alt="Learn_More"
               />
             </a>
           </div>
@@ -164,7 +152,7 @@
                 src="./assets/img/Rectangle 221.avif"
                 width="344"
                 height="238"
-                alt="Perum2"
+                alt="Perum_villa"
               />
               <h2 class="Group368_item-title">Perum griya asri</h2>
               <p class="Group368_item-text">Bogor, Jawa Barat</p>
@@ -183,7 +171,7 @@
                 src="./assets/img/Rectangle 229.avif"
                 width="344"
                 height="238"
-                alt="Perum3"
+                alt="Perum_cat"
               />
               <h2 class="Group368_item-title">Perum griya asri</h2>
               <p class="Group368_item-text">Bogor, Jawa Barat</p>
@@ -199,10 +187,10 @@
           </ul>
         </div>
       </section>
-      <section class="Group416">
+      <section class="Group416" id="about">
         <div class="container">
           <p class="Group416_link">our advante</p>
-          <h1 class="Group416_title">Giving you peace of mind</h1>
+          <h2 class="Group416_title">Giving you peace of mind</h2>
           <ul class="Group416_list">
             <li class="Group416_item">
               <img
@@ -296,41 +284,46 @@
           </ul>
         </div>
       </section>
-      <section class="Group365">
+      <section class="Group365" id="service">
         <div class="container">
-          <div class="Group365_thumb">
-            <img
-              src="./assets/icons/Tick Square.png"
-              width="64"
-              height="64"
-              alt="Tick"
-            />
-            <p class="Group365_titel">4.8</p>
-            <div class="Group365_star">
-              <img src="./assets/icons/star (1) 1.avif" alt="star" /><img
-                src="./assets/icons/star (1) 1.avif"
-                alt="star"
-              /><img src="./assets/icons/star (1) 1.avif" alt="star" />
-              <img src="./assets/icons/star (1) 1.avif" alt="star" /><img
-                src="./assets/icons/star (1) 1.avif"
-                alt="star"
-              />
-            </div>
-            <p class="Group365_text1">Trusted on</p>
-            <p class="Group365_text2">500+ Reviews</p>
-          </div>
-          <div class="Group365_thumb1">
-            <p class="Group365_titel">250+</p>
-            <p class="Group365_text3">Property Sale</p>
-            <p class="Group365_titel">550+</p>
-            <p class="Group365_text4">Apartmen Rent</p>
-          </div>
           <div class="Group365_wrapper">
-            <img
-              class="Group365_img"
-              src="./assets/img/Rectangle 230 (1).avif"
-              alt="house"
-            />
+            <div class="about__wrapper">
+              <img
+                class="Group365_img"
+                src="./assets/img/Rectangle 230 (1).avif"
+                alt="house"
+              />
+
+              <div class="Group365_thumb">
+                <img
+                  src="./assets/icons/Tick Square.png"
+                  width="64"
+                  height="64"
+                  alt="Tick"
+                />
+                <p class="Group365_titel">4.8</p>
+                <div class="Group365_star">
+                  <img src="./assets/icons/star (1) 1.avif" alt="star" /><img
+                    src="./assets/icons/star (1) 1.avif"
+                    alt="star"
+                  /><img src="./assets/icons/star (1) 1.avif" alt="star" />
+                  <img src="./assets/icons/star (1) 1.avif" alt="star" /><img
+                    src="./assets/icons/star (1) 1.avif"
+                    alt="star"
+                  />
+                </div>
+                <p class="Group365_text1">Trusted on</p>
+                <p class="Group365_text2">500+ Reviews</p>
+              </div>
+
+              <div class="Group365_thumb1">
+                <p class="Group365_titel">250+</p>
+                <p class="Group365_text3">Property Sale</p>
+                <p class="Group365_titel">550+</p>
+                <p class="Group365_text4">Apartmen Rent</p>
+              </div>
+            </div>
+
             <div class="right_side">
               <p class="Group365_link">about us</p>
               <h2 class="Group365_div-titel">
@@ -347,7 +340,7 @@
           </div>
         </div>
       </section>
-      <section class="Group415">
+      <section class="Group415" id="contact">
         <div class="container">
           <p class="Group415_text1">CUSTOMER TESTIMONIAL</p>
           <div class="Learn_wrap">
@@ -366,7 +359,7 @@
             <li class="Group415_item">
               <img
                 class="Group415_item-img"
-                src="./assets/icons/“.avif"
+                src="./assets/icons/“ (1).avif"
                 width="42"
                 height="34"
                 alt="avif"
@@ -381,8 +374,8 @@
               <div class="Group415_item-wrap">
                 <img
                   src="./assets/img/Ellipse 3.avif"
-                  width="48px"
-                  height="48px"
+                  width="48"
+                  height="48"
                   alt="man"
                 />
                 <div class="Group415_item-wrap1">
@@ -394,7 +387,7 @@
             <li class="Group415_item">
               <img
                 class="Group415_item-img"
-                src="./assets/icons/“.avif"
+                src="./assets/icons/“ (1).avif"
                 width="42"
                 height="34"
                 alt="avif"
@@ -423,7 +416,7 @@
             <li class="Group415_item">
               <img
                 class="Group415_item-img"
-                src="./assets/icons/“.avif"
+                src="./assets/icons/“ (1).avif"
                 width="42"
                 height="34"
                 alt="avif"
@@ -439,8 +432,8 @@
               <div class="Group415_item-wrap">
                 <img
                   src="./assets/img/Ellipse 3 (2).avif"
-                  width="48px"
-                  height="48px"
+                  width="48p"
+                  height="48"
                   alt="woman"
                 />
                 <div class="Group415_item-wrap1">
@@ -455,68 +448,84 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <ul class="footer_list">
-          <li class="footer_wrap">
+        <div class="footer_list">
+          <div class="footer_wrap">
             <a class="footer_link" href="#"
               ><img
                 src="./assets/icons/Group 421.png "
                 width="40"
                 height="40"
-                alt="Mulih"
+                alt="logo_footer"
               /><span class="link-text">Mulih</span></a
             >
             <p class="footer_text">
               We have built our reputation as true local area experts.
             </p>
-            <h3 class="footer_title">Newsletter</h3>
-            <div class="send_wrap">
+            <label for="email">Newsletter</label>
+            <form>
               <input
+                id="email"
                 class="footer_input"
-                element.value="Input your email"
+                placeholder="Input your email"
                 type="text"
-              /><button class="button">Send</button>
-            </div>
-          </li>
-          <li class="footer_wrap">
+              />
+
+              <button type="submit" class="button">Send</button>
+            </form>
+          </div>
+          <div class="footer_wrap">
             <h3 class="footer_title">Service</h3>
-            <a class="footer_link1" href="#">About us</a>
-            <a class="footer_link1" href="#">Careers</a>
-            <a class="footer_link1" href="#">Terms & Conditions</a>
-            <a class="footer_link1" href="#">Privacy & Policy</a>
-          </li>
-          <li class="footer_wrap">
+            <ul>
+              <li><a class="footer_link1" href="#">About us</a></li>
+              <li><a class="footer_link1" href="#">Careers</a></li>
+              <li><a class="footer_link1" href="#">Terms & Conditions</a></li>
+              <li><a class="footer_link1" href="#">Privacy & Policy</a></li>
+            </ul>
+          </div>
+          <div class="footer_wrap">
             <h3 class="footer_title">Community</h3>
-            <a class="footer_link1" href="#">Find agents</a>
-            <a class="footer_link1" href="#">Lifestyle</a>
-            <a class="footer_link1" href="#">Legal notic</a>
-          </li>
-          <li class="footer_wrap">
+            <ul>
+              <li><a class="footer_link1" href="#">Find agents</a></li>
+              <li><a class="footer_link1" href="#">Lifestyle</a></li>
+              <li><a class="footer_link1" href="#">Legal notic</a></li>
+            </ul>
+          </div>
+          <div class="footer_wrap">
             <h3 class="footer_title">Follow us on</h3>
-            <div class="social_wrap">
-              <img
-                class="social_circle"
-                src="./assets/icons/Instagram.avif"
-                width="17"
-                height="17"
-                alt="instagram"
-              />
-              <img
-                class="social_circle"
-                src="./assets/icons/Youtube.avif"
-                width="17"
-                height="17"
-                alt="youtube"
-              />
-              <img
-                class="social_circle"
-                src="./assets/icons/facebook.avif"
-                width="17"
-                height="17"
-                alt="facebook"
-              />
-            </div>
-          </li>
-        </ul>
+            <ul class="footer-social">
+              <li>
+                <a href=""
+                  ><img
+                    class="social_circle"
+                    src="./assets/icons/Instagram.avif"
+                    width="17"
+                    height="17"
+                    alt="instagram"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    class="social_circle"
+                    src="./assets/icons/Youtube.avif"
+                    width="17"
+                    height="17"
+                    alt="youtube"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    class="social_circle"
+                    src="./assets/icons/facebook.avif"
+                    width="17"
+                    height="17"
+                    alt="facebook"
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
