--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
             <p class="footer_text">
               We have built our reputation as true local area experts.
             </p>
-            <label for="email">Newsletter</label>
+            <label class="lebel" for="email">Newsletter</label>
             <form>
               <input
                 id="email"
@@ -476,10 +476,18 @@
           <div class="footer_wrap">
             <h3 class="footer_title">Service</h3>
             <ul>
-              <li><a class="footer_link1" href="#">About us</a></li>
-              <li><a class="footer_link1" href="#">Careers</a></li>
-              <li><a class="footer_link1" href="#">Terms & Conditions</a></li>
-              <li><a class="footer_link1" href="#">Privacy & Policy</a></li>
+              <li class="item_footer">
+                <a class="footer_link1" href="#">About us</a>
+              </li>
+              <li class="item_footer">
+                <a class="footer_link1" href="#">Careers</a>
+              </li>
+              <li class="item_footer">
+                <a class="footer_link1" href="#">Terms & Conditions</a>
+              </li>
+              <li class="item_footer">
+                <a class="footer_link1" href="#">Privacy & Policy</a>
+              </li>
             </ul>
           </div>
           <div class="footer_wrap">
