--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
               We have built our reputation as true local area experts.
             </p>
             <label class="lebel" for="email">Newsletter</label>
-            <form>
+            <form class="form">
               <input
                 id="email"
                 class="footer_input"
